--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext.kotlin_version = '1.2.70'
-    ext.ktor_version = '0.9.3'
+    ext.ktor_version = '0.9.5'
     ext.logback_version = '1.2.1'
     ext.kotlinx_coroutines_version = '0.24.0'
     
@@ -36,6 +36,7 @@ compileKotlin {
 repositories {
     jcenter()
     maven { url 'https://kotlin.bintray.com/ktor' }
+    maven { url 'https://dl.bintray.com/kotlin/kotlinx' }
 }
 
 dependencies {
@@ -50,6 +51,7 @@ dependencies {
     compile "io.ktor:ktor-jackson:$ktor_version"
     compile "io.ktor:ktor-client-core:$ktor_version"
     compile "io.ktor:ktor-client-json:$ktor_version"
+    compile "io.ktor:ktor-client-gson:$ktor_version"
     compile "io.ktor:ktor-client-apache:$ktor_version"
 
     compile 'org.dizitart:potassium-nitrite:3.1.0'
