--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,17 @@ group 'ktor-test'
 version '0.0.1'
 mainClassName = "io.ktor.server.netty.DevelopmentEngine"
 
+kotlin.experimental.coroutines = 'enable'
+
 sourceSets {
     main.kotlin.srcDirs = main.java.srcDirs = ['src']
     test.kotlin.srcDirs = test.java.srcDirs = ['test']
     main.resources.srcDirs = ['resources']
     test.resources.srcDirs = ['testresources']
+}
+
+configurations {
+    ktlint
 }
 
 compileKotlin {
@@ -61,6 +67,25 @@ dependencies {
     testCompile "io.ktor:ktor-server-core:$ktor_version"
     testCompile "io.ktor:ktor-client-core:$ktor_version"
     testCompile "io.ktor:ktor-client-json:$ktor_version"
+
+    ktlint "com.github.shyiko:ktlint:0.29.0"
 }
 
-kotlin.experimental.coroutines = 'enable'
+task ktlint(type: JavaExec, group: "verification") {
+    description = "Check Kotlin code style."
+    main = "com.github.shyiko.ktlint.Main"
+    classpath = configurations.ktlint
+    args "src/**/*.kt"
+    // to generate report in checkstyle format prepend following args:
+    // "--reporter=plain", "--reporter=checkstyle,output=${buildDir}/ktlint.xml"
+    // see https://github.com/shyiko/ktlint#usage for more
+}
+check.dependsOn ktlint
+
+task ktlintFormat(type: JavaExec, group: "formatting") {
+    description = "Fix Kotlin code style deviations."
+    main = "com.github.shyiko.ktlint.Main"
+    classpath = configurations.ktlint
+    args "-F", "src/**/*.kt"
+}
+
