--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
-    ext.kotlin_version = '1.3.10'
-    ext.ktor_version = '1.0.1'
+    ext.kotlin_version = '1.3.21'
+    ext.ktor_version = '1.1.3'
     ext.logback_version = '1.2.3'
     
     repositories {
@@ -50,13 +50,13 @@ dependencies {
     compile "ch.qos.logback:logback-classic:$logback_version"
     compile "io.ktor:ktor-metrics:$ktor_version"
     compile "io.ktor:ktor-server-core:$ktor_version"
-    compile "io.ktor:ktor-jackson:$ktor_version"
+    compile "io.ktor:ktor-gson:$ktor_version"
     compile "io.ktor:ktor-client-core:$ktor_version"
     compile "io.ktor:ktor-client-json:$ktor_version"
     compile "io.ktor:ktor-client-gson:$ktor_version"
     compile "io.ktor:ktor-client-apache:$ktor_version"
 
-    compile 'org.dizitart:potassium-nitrite:3.1.0'
+    compile 'org.dizitart:potassium-nitrite:3.2.0'
 
     testCompile "io.ktor:ktor-server-tests:$ktor_version"
     testCompile "io.ktor:ktor-metrics:$ktor_version"
