--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
-    ext.kotlin_version = '1.3.21'
+    ext.kotlin_version = '1.3.41'
     ext.ktor_version = '1.1.3'
     ext.logback_version = '1.2.3'
-    
+
     repositories {
         jcenter()
     }
-    
+
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
@@ -15,11 +15,9 @@ buildscript {
 apply plugin: 'kotlin'
 apply plugin: 'application'
 
-group 'ktor-test'
+group 'jte-experiments'
 version '0.0.1'
 mainClassName = "io.ktor.server.netty.DevelopmentEngine"
-
-kotlin.experimental.coroutines = 'enable'
 
 sourceSets {
     main.kotlin.srcDirs = main.java.srcDirs = ['src']
@@ -41,7 +39,6 @@ compileKotlin {
 repositories {
     jcenter()
     maven { url 'https://kotlin.bintray.com/ktor' }
-    maven { url 'https://dl.bintray.com/kotlin/kotlinx' }
 }
 
 dependencies {
