Adds a Manifest to the jar

--- a/build.gradle
+++ b/build.gradle
@@ -82,3 +82,11 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     args "-F", "src/**/*.kt"
 }
 
+jar {
+    manifest {
+        attributes(
+            'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+            'Main-Class': 'com.orange.ccmd.sandbox.ApplicationKt'
+        )
+    }
+}
