--- a/build.gradle
+++ b/build.gradle
@@ -83,3 +83,7 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     classpath = configurations.ktlint
     args "-F", "src/**/*.kt"
 }
+
+task stage() {
+    dependsOn clean, shadowJar
+}
