--- a/resources/application.conf
+++ b/resources/application.conf
@@ -10,5 +10,5 @@ ktor {
 }
 
 apiToken = ${STRAVA_API_TOKEN}
-proxyHost = ${PROXY_HOST}
-proxyPort = ${PROXY_PORT}
+proxyHost = ${?PROXY_HOST}
+proxyPort = ${?PROXY_PORT}
