Allows to fetch tokens

--- a/resources/application.conf
+++ b/resources/application.conf
@@ -4,11 +4,14 @@ ktor {
         port = ${?PORT}
     }
     application {
-        modules = [ com.orange.ccmd.sandbox.ApplicationKt.module ]
+        modules = [com.orange.ccmd.sandbox.ApplicationKt.module]
     }
 
 }
 
 apiToken = ${STRAVA_API_TOKEN}
+apiCode = ${STRAVA_API_CODE}
+apiClientId = ${STRAVA_API_CLIENT_ID}
+apiClientSecret = ${STRAVA_API_CLIENT_SECRET}
 proxyHost = ${?PROXY_HOST}
 proxyPort = ${?PROXY_PORT}
